<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_ch"
            android:textColor="#0b84aa"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="#0b84aa"
            android:text="@string/ch_name" />

        <EditText
            android:id="@+id/editText_chName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:textColor="#0b84aa"
            android:text="@string/type" />

        <EditText
            android:id="@+id/editText_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:textColor="#0b84aa"
            android:text="@string/unit" />

        <EditText
            android:id="@+id/editText_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="#0b84aa"
            android:text="@string/sampling_period" />

        <EditText
            android:id="@+id/editText_SP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="number" />

        <Button
            android:id="@+id/button_nextCh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="#0b84aa"
            android:text="@string/next" />

    </LinearLayout>