
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devName"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:text="@string/name" />

	         <TextView
	            android:id="@+id/txt_name"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content"
	             />
		</TableRow>
	
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devIP"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:text="@string/ip" />

	         <TextView
	            android:id="@+id/txt_ip"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content"/>
		</TableRow>
		
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devLocation"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:text="@string/location" />

	         <TextView
	            android:id="@+id/txt_location"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content" />
	     </TableRow>
	     <TableRow>

	        <TextView
	            android:id="@+id/txt_devTag"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:text="@string/tag" />

	         <TextView
	            android:id="@+id/txt_tag"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content" />
		</TableRow>
	     
	      <TableRow>

	        <TextView
	            android:id="@+id/txt_devLatitude"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:text="@string/latitude" />

	         <TextView
	            android:id="@+id/txt_latitude"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content"/>
		</TableRow>
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devLongitude"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:text="@string/longitude" />

	         <TextView
	            android:id="@+id/txt_longitude"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content"/>
		</TableRow>

		
    </TableLayout>
