<?xml version="1.0" encoding="UTF-8"?>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devName"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/name"
	            android:textColor="#0b84aa" />

	         <TextView
	            android:id="@+id/txt_name"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	           android:textColor="#0b84aa"
	             />
		</TableRow>
	
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devIP"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ip"
	            android:textColor="#0b84aa" />

	         <TextView
	            android:id="@+id/txt_ip"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:textColor="#0b84aa"/>
		</TableRow>
		
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devLocation"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/location"
	            android:textColor="#0b84aa" />

	         <TextView
	            android:id="@+id/txt_location"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:textColor="#0b84aa" />
	     </TableRow>
	     <TableRow>

	        <TextView
	            android:id="@+id/txt_devTag"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/tag"
	            android:textColor="#0b84aa" />

	         <TextView
	            android:id="@+id/txt_tag"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content" 
	           android:textColor="#0b84aa"/>
		</TableRow>
	     
	      <TableRow>

	        <TextView
	            android:id="@+id/txt_devLatitude"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/latitude"
	          android:textColor="#0b84aa" />

	         <TextView
	            android:id="@+id/txt_latitude"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	           android:textColor="#0b84aa"/>
		</TableRow>
		<TableRow>

	        <TextView
	            android:id="@+id/txt_devLongitude"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/longitude"
	         android:textColor="#0b84aa" />

	         <TextView
	            android:id="@+id/txt_longitude"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:textColor="#0b84aa"
	            android:layout_height="wrap_content"/>
		</TableRow>
    </TableLayout>