<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         
       >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name"
           android:textColor="#0b84aa" />

        <EditText
            android:id="@+id/editText_sensorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:textColor="@color/navy"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="#0b84aa" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:inputType="number" />

        <Button
            android:id="@+id/button_senNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0b84aa"
            android:text="@string/next" />

    </LinearLayout>