<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">
 <LinearLayout android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="90dip"
                android:background="@layout/footer"
                android:layout_alignParentBottom="true">
        </LinearLayout>
        
  <!-- Registration Form -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          >
          <!-- Full Name Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/username"
              android:textColor="#0b84aa" />

          <EditText
              android:id="@+id/reg_username"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dip"
              android:layout_marginTop="5dip"
              android:inputType="text"
              android:singleLine="true" />

          <!--  Email Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/email"
               android:textColor="#0b84aa" />

          <EditText
              android:id="@+id/reg_email"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dip"
              android:layout_marginTop="5dip"
              android:inputType="textEmailAddress"
              android:singleLine="true" />

          <!-- Password Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/password"
               android:textColor="#0b84aa" />

          <EditText
              android:id="@+id/reg_password"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:inputType="textPassword"
              
              android:singleLine="true" />

          <!-- Register Button -->

          <Button
              android:id="@+id/btnRegister"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:text="@string/register_new"
               android:textColor="#0b84aa" />

          <!-- Link to Login Screen -->

          <TextView
              android:id="@+id/link_to_login"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="40dip"
              android:layout_marginTop="40dip"
              android:gravity="center"
              android:text="@string/prv_user"
               android:textColor="#0b84aa"
              android:textSize="20dip" />
 
        </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>