<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="#ffffff">
        
        
       

        <LinearLayout android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="90dip"
    android:background="@layout/footer"
    android:layout_alignParentBottom="true">
</LinearLayout>
<!-- Login Form -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          >
          <!--  Username Label -->

          <TextView
              android:id="@+id/textview1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/username"
              android:textColor="#0b84aa" />

          <EditText
              android:id="@+id/edit_usr"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dip"
              android:layout_marginTop="5dip"
              android:inputType="text"
              android:singleLine="true" />

          <!--  Password Label -->

          <TextView
              android:id="@+id/textview2"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/password"
              android:textColor="#0b84aa" />

          <EditText
              android:id="@+id/edit_pass"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:inputType="textPassword"
              
              android:singleLine="true" />

          <!-- Login button -->

          <Button
              android:id="@+id/btnLogin"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:text="@string/log" 
               android:textColor="#0b84aa"/>

          <!-- Link to Registration Screen -->

          <TextView
              android:id="@+id/link_to_register"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="40dip"
              android:layout_marginTop="40dip"
              android:gravity="center"
              android:text="@string/linktoreg"
              android:textColor="#0b84aa"
              android:textSize="20dip" />
 
</LinearLayout>
<!-- Login Form Ends -->
    
    
    </RelativeLayout>
    </ScrollView> 
   